# xiaotian

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SCHEDULE.md  _typos.toml  cliff.toml
.github/workflows/: build.yml
docs/: models_relationship.md  xiaotian.excalidraw
docs/changelog/: ui-v0.0.1.md  ui-v0.0.2.md  ui-v0.0.3.md  ui-v0.0.4.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.7.0.md  v0.8.1.md  v0.8.2.md  v0.8.3.md
docs/implementation/: v0.2.5_implementation.md  v0.2.5_interactive_improvement.md  v0.8.x.md
docs/plan/: refactor-v0.2.6-v2.md  refactor-v0.2.6.md  v0.2.1_plan.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.1.md
docs/reference/: README.md  github_api_en.md  github_api_zh.md  ollama.md
docs/specs/: api-v0.0.4.md  api-v0.0.5.md
examples/: github_fetch.rs
frontend-gradio/: .gitignore  README.md  requirements.txt  run.py
frontend-gradio/src/: app.py
frontend-gradio/src/components/: interface.py
frontend-gradio/src/utils/: mock.py  xiaotian_api.py
frontend-gradio/tests/: test_interface.py
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: adapter.rs  commands.rs  mod.rs
src/command/: error.rs  mod.rs
src/llm/: error.rs  mod.rs  ollama.rs  prompt.rs
src/models/: config.rs  mod.rs  repository.rs  source.rs  subscription.rs  update.rs
src/notification/: config.rs  email.rs  mod.rs
src/process/: add.rs  delete.rs  error.rs  fetch.rs  list.rs  mod.rs  schedule.rs  show.rs
src/process/handlers/: add.rs  clear.rs  delete.rs  fetch.rs  help.rs  list.rs  mod.rs  show.rs
src/repl/: commands.rs  error.rs  implementation.rs  mod.rs
src/repl/cmd/: add.rs  delete.rs  fetch.rs  list.rs  mod.rs  show.rs
src/sources/: github.rs  github_test.rs  mod.rs
src/storage/: error.rs  memory.rs  mod.rs  traits.rs
src/utils/: github_client.rs  mod.rs
xiaotian/: Cargo.toml
xiaotian-py-binding/: .gitignore  Cargo.toml  README.md  pyproject.toml
xiaotian-py-binding/python/xiaotian_py_binding/: __init__.py
xiaotian-py-binding/src/: lib.rs
xiaotian-ui/: .pnp.cjs  README.md  index.html  package.json  tailwind.config.js  tsconfig.json
xiaotian-ui/src/: App.vue  main.ts
xiaotian-ui/src/assets/: main.css
xiaotian-ui/src/components/: ChatPanel.vue  DetailView.vue  EmailTagsInput.vue  QAView.vue  SettingsPanel.vue  Sidebar.vue  SummaryView.vue
xiaotian-ui/src/config/: api.ts
xiaotian-ui/src/services/: README.md  api.ts  index.ts  mock.ts
xiaotian-ui/src/stores/: api.ts  app.js  app.ts
xiaotian-ui/src/types/: api.ts  index.ts
xiaotian-ui/src/utils/: cronParser.ts  env.ts
xiaotian/examples/: github_fetch.rs
xiaotian/src/: config.rs  error.rs  lib.rs  log.rs
xiaotian/src/llm/: deepseek.rs  error.rs  mod.rs  ollama.rs  prompt.rs
xiaotian/src/models/: hackernews.rs  mod.rs  repository.rs  source.rs  update.rs
xiaotian/src/notification/: config.rs  email.rs  mod.rs
xiaotian/src/process/: fetch.rs  list.rs  mod.rs  reporter.rs  schedule.rs
xiaotian/src/repl/: context.rs  mod.rs
xiaotian/src/repl/cmd/: add.rs  delete.rs  fetch.rs  list.rs  mod.rs
xiaotian/src/storage/: error.rs  memory.rs  mod.rs  mysql.rs
xiaotian/src/utils/: github_client.rs  mod.rs
