[package]
name = "xiaotian"
version = "0.1.0"
edition = "2024"
authors = ["Hedon <171725713@qq.com>"]
description = "A CLI tool for monitoring GitHub repositories."
license = "MIT"
repository = "https://github.com/hedon954/xiaotian"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
