[package]
name = "xiaotian"
version = "0.3.0"
edition = "2024"
authors = ["Hedon <171725713@qq.com>"]
description = "A CLI tool for monitoring GitHub repositories."
license = "MIT"
repository = "https://github.com/hedon954/xiaotian"

# 添加库配置
[lib]
name = "xiaotian"
path = "src/lib.rs"

[[bin]]
name = "xiaotian"
path = "src/bin/xiaotian.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI and REPL
rustyline = "15.0.0"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
nu-ansi-term = "0.50.0"
enum_dispatch = "0.3.13"

# Async runtime
tokio = { version = "1.44.0", features = ["full"] }
async-trait = "0.1"

# GitHub API client (for future use)
octocrab = "0.43.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.11"
uuid = { version = "1.4", features = ["v4", "serde"] }
dashmap = "6.1.0"
dirs = "6.0.0"
crossbeam-channel = "0.5.14"
oneshot = "0.1.11"
cron_tab = { version = "0.2.2", features = ["async"] }
cron = "0.15.0"
reqwest = "0.12.14"

# LLM
ollama-rs = "0.2.6"

# Log
env_logger = "0.11.6"
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.1"
