[package]
name = "xiaotian-py-binding"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xiaotian_py_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }
tokio = { workspace = true }
xiaotian = { workspace = true }
