[project]
name = "xiaotian-py-binding"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hedon954", email = "171725713@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=25.0.1",
    "ipython>=9.0.2",
]

[tool.maturin]
python-source = "python"
module-name = "xiaotian_py_binding._lowlevel"
features = ["pyo3/extension-module"]
